--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img class="logo"src="img/Dog/LogoDog.svg">
+    <h1 class="tituloPrincipal">DOGcall</h1>
+
+    <h2 class="tituloPrincipal">
+       ADOPTA 
+    </h2>
+    <p>Lorem ipsum, or lipsum as it is sometimes known, is century who is 
+         thought to have scrambled parts of Cicero's De Finibus Bonorum 
+         et Malorum for use in a type specimen book. It usually begins wit
+         h: Lorem ipsum, or lipsum as it is sometimes known, is dummy text
+         used in laying out print, graphic or web designs. The passage 
+         is attributed to an unknown typesetter in the 15th century who is thought to h
+         ave scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specim
+         en book. It usually beaphic or web designsrambled parts of Cicero
+        's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with: </p>
+        <a class="boton-personalizado">YA!</a>
+
+    <img class="dog"src="img/Dog/Dog.jpg">
+
+
 </body>
 </html>
